[metadata]
name = sft
summary = Socket File Transmitter
author = SFT development team
home-page = https://github.com/AlexeiBuzuma/LocalComputeNetworks
description-file =
    README.rst
classifier =
    License :: OSI Approved :: MIT
    Environment :: Any
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages = sft
data_files =
    /usr/etc/sft =
        etc/sft/sft.conf

[entry_points]
console_scripts =
    sft-testspeed-server = sft.tools.speedmeter.server:main
    sft-testspeed-client = sft.tools.speedmeter.client:main
