[metadata]
name = sft
summary = Socket File Transmitter
author = SFT development team
home-page = https://github.com/AlexeiBuzuma/LocalComputeNetworks
description-file =
    README.rst
classifier =
    License :: OSI Approved :: MIT
    Environment :: Any
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    sft
    sft_tools

[entry_points]
console_scripts =
    sft-testspeed-server = sft_tools.speedmeter.server:main
    sft-testspeed-client = sft_tools.speedmeter.client:main
    sft-multiclient-server = sft_tools.multiclient_server.server:main
    sft-multiclient-client = sft_tools.multiclient_server.client:main
    sft-infinite-request-sender = sft_tools.infinite_request_sender.main:main
    sft-server = sft.server.launcher:main
    sft-client = sft.client.launcher:main
